<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/order_list"
        android:icon="@drawable/ic_orders_list"
        app:showAsAction="withText"
        android:title="@string/order_list" />

    <item
        android:id="@+id/send_sms"
        android:icon="@drawable/ic_send_sms"
        app:showAsAction="withText"
        android:title="@string/send_sms" />

    <item
        android:id="@+id/send_email"
        android:icon="@drawable/ic_send_mail"
        app:showAsAction="withText"
        android:title="@string/send_email" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"
        android:title="@string/share" />

    <item
        android:id="@+id/log_out"
        android:title="@string/log_out" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        android:title="@string/settings" />

    <item
        android:id="@+id/about"
        android:title="@string/about" />

</menu>