<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/username_linlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp">
        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_label"/>

        <EditText
            android:id="@+id/username_input"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_linlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/username_linlay">
        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_linlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_linlay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/login_btn" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/register_btn" />
    </LinearLayout>
</RelativeLayout>