<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/main_item_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/main_slider"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@id/main_item_spinner"
        android:layout_centerHorizontal="true"
        android:valueFrom="0"
        android:valueTo="10"
        android:stepSize="1" />

    <TextView
        android:id="@+id/acc_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_slider"
        android:padding="20dp"
        android:text="@string/acc_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/acc_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/acc_text_view"
        tools:listitem="@layout/recycler_view_item" />

    <TextView
        android:id="@+id/sum_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@id/acc_recycler_view"
        android:text="@string/sum_price_label" />

    <TextView
        android:id="@+id/sum_price_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/sum_price_label"
        android:layout_alignBaseline="@id/sum_price_label"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="0$"/>

    <Button
        android:id="@+id/order_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sum_price_view"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/order_btn"/>

</RelativeLayout>